# Jumpy

./: CHANGELOG.md  Cargo.toml  README.md
src/: cmd.rs  index.rs  main.rs
src/shells/: init.bash  init.fish  init.zsh
