[package]
name = "jumpy"
version = "0.4.5"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A full-featured replacement jump utilities like Zoxide or `z`"
readme = "README.md"
repository = "https://github.com/ClementNerma/Jumpy"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
dirs = "5.0.1"
dunce = "1.0.5"
