[package]
name = "jumpy"
version = "0.4.10"
edition = "2021"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
license = "Apache-2.0"
description = "A full-featured replacement jump utilities like Zoxide or `z`"
readme = "README.md"
repository = "https://github.com/ClementNerma/Jumpy"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.64"
dirs = "6.0.0"
dunce = "1.0.5"
